--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- Load the main entry point -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
