feat: Update project dependencies and configurations
This commit updates project dependencies to their latest stable versions and refactors build configurations. It also introduces a new favicon and updates the application logo to a school icon, enhancing the visual identity of the RKAS Pintar SD application. The Vercel configuration has been updated to improve static file serving and service worker behavior. TypeScript and Vite configurations have been simplified and aligned with modern best practices.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <!-- PWA Settings -->
     <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2997/2997295.png">
     <meta name="theme-color" content="#2563eb">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -31,7 +32,9 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.1",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
-    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2"
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
