--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.1",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2",
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.3.1"
   }
